--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -31,6 +31,8 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.24.8",
+    "@cartridge/connector": "0.6.0",
+    "@cartridge/controller": "0.6.0",
     "@cashu/cashu-ts": "^2.0.0",
     "@docusaurus/core": "^3.5.2",
     "@docusaurus/preset-classic": "^3.5.2",
@@ -61,7 +63,7 @@
     "@reown/appkit-wagmi-react-native": "~1.0.1",
     "@scure/bip39": "^1.5.0",
     "@starknet-react/chains": "^3.1.0",
-    "@starknet-react/core": "^3.5.0",
+    "@starknet-react/core": "^3.7.2",
     "@starknet-react/kakarot": "^3.0.9",
     "@stripe/stripe-react-native": "0.38.6",
     "@tanstack/react-query": "^5.40.0",
@@ -69,8 +71,9 @@
     "@uniswap/sdk-core": "^5.3.1",
     "@walletconnect/react-native-compat": "2.16.1",
     "@webbtc/webln-types": "^2.1.0",
-    "afk_nostr_sdk": "workspace:*",
     "afk-abi": "workspace:*",
+    "afk_nostr_sdk": "workspace:*",
+    "autoprefixer": "^10.4.20",
     "axios": "^1.7.2",
     "babel-plugin-module-resolver": "^5.0.2",
     "bip39": "^3.1.0",
@@ -110,6 +113,8 @@
     "npx": "^10.2.2",
     "path": "^0.12.7",
     "pbkdf2": "^3.1.2",
+    "pixel_component": "workspace:*",
+    "postcss": "^8.5.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.74.3",
@@ -134,11 +139,11 @@
     "react-native-webview-crypto": "^0.0.25",
     "starknet": "6.11.0",
     "starknetkit": "^2.6.1",
+    "tailwindcss": "3",
     "text-encoding": "^0.7.0",
     "viem": "2.21.60",
     "wagmi": "^2.12.8",
-    "zustand": "^4.5.2",
-    "pixel_component": "workspace:*"
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
