try minify and nativewind3

--- a/apps/art-game/tsconfig.json
+++ b/apps/art-game/tsconfig.json
@@ -19,7 +19,10 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "pixel_component": [
+        "../../packages/pixel_component/"
+      ]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
