--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -110,11 +110,12 @@
     "memoize-one": "^6.0.0",
     "metro-react-native-babel-preset": "^0.77.0",
     "mobile": "link:",
+    "nativewind": "^4.0.1",
     "npx": "^10.2.2",
     "path": "^0.12.7",
     "pbkdf2": "^3.1.2",
     "pixel_component": "workspace:*",
-    "postcss": "^8.5.3",
+    "postcss": "^8.4.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.74.3",
@@ -139,7 +140,7 @@
     "react-native-webview-crypto": "^0.0.25",
     "starknet": "6.11.0",
     "starknetkit": "^2.6.1",
-    "tailwindcss": "3",
+    "tailwindcss": "3.3.2",
     "text-encoding": "^0.7.0",
     "viem": "2.21.60",
     "wagmi": "^2.12.8",
