--- a/apps/art-game/package.json
+++ b/apps/art-game/package.json
@@ -24,7 +24,8 @@
     "react-transition-group": "^4.4.5",
     "react-use-websocket": "^4.13.0",
     "starknet": "^6.23.1",
-    "starknetkit": "^2.6.1"
+    "starknetkit": "^2.6.1",
+    "pixel_component": "workspace:*"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
