--- a/apps/mobile/tsconfig.json
+++ b/apps/mobile/tsconfig.json
@@ -2,7 +2,10 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "target": "ESNext",
-    "lib": ["dom", "esnext"],
+    "lib": [
+      "dom",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
@@ -26,12 +29,34 @@
     "jsx": "react-native",
     "module": "ES6",
     "paths": {
-      "afk_nostr_sdk": ["../../packages/afk_nostr_sdk/src"],
-      "common": ["../../packages/common/src"],
-      "pixel_ui": ["../../packages/pixel_ui/src"],
-      "pixel_component": ["../../packages/pixel_component/"]
-    },
+      "afk_nostr_sdk": [
+        "../../packages/afk_nostr_sdk/src"
+      ],
+      "common": [
+        "../../packages/common/src"
+      ],
+      "pixel_ui": [
+        "../../packages/pixel_ui/src"
+      ],
+      "pixel_component": [
+        "../../packages/pixel_component/"
+      ]
+    }
   },
-  "exclude": ["node_modules", "dist", "babel.config.js", "metro.config.js", "jest.config.js"],
-  "include": ["**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx"]
+  "exclude": [
+    "node_modules",
+    "dist",
+    "babel.config.js",
+    "metro.config.js",
+    "jest.config.js"
+  ],
+  "include": [
+    "**/*.ts",
+    "**/*.tsx",
+    "**/*.js",
+    "**/*.jsx",
+    "**/*.json",
+    "**/*.css",
+    "nativewind-env.d.ts"
+  ]
 }
