--- a/packages/pixel_component/package.json
+++ b/packages/pixel_component/package.json
@@ -13,6 +13,11 @@
       "require": "./dist/index.js",
       "style": "./dist/styles/index.css"
     },
+    "./native": {
+      "types": "./dist/native.d.ts",
+      "import": "./dist/native.js",
+      "require": "./dist/native.js"
+    },
     "./styles": "./dist/styles/index.css"
   },
   "sideEffects": [
@@ -26,17 +31,20 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "prebuild": "rm -rf dist",
-    "build": "pnpm run build:css && tsup src/index.ts --format esm,cjs --dts --external react --external react-dom --external @cartridge/connector --external @cartridge/controller --external @starknet-react/chains --external @starknet-react/core --external starknet --external starknetkit && cp -r src/styles dist/",
+    "build": "pnpm run build:css && tsup src/index.ts src/native.ts --format esm,cjs --dts --external react --external react-dom --external react-native --external react-native-webview --external @cartridge/connector --external @cartridge/controller --external @starknet-react/chains --external @starknet-react/core --external starknet --external starknetkit && cp -r src/styles dist/",
+    "build:css": "NODE_ENV=production tailwindcss -i src/styles/index.css -o dist/styles/index.css --minify && NODE_ENV=production TAILWIND_MODE=native tailwindcss -i src/styles/index.css -o dist/styles/native.css --minify",
     "prepare": "npm run build",
     "start": "next start",
     "lint": "next lint",
-    "lint:fix": "next lint --fix",
-    "build:css": "postcss src/styles/index.css -o dist/styles/index.css"
+    "lint:fix": "next lint --fix"
   },
   "dependencies": {
     "@cartridge/connector": "0.6.0",
     "@cartridge/controller": "0.6.0",
     "js-sha256": "^0.11.0",
+    "nativewind": "^4.1.23",
+    "pixel_component": "link:",
+    "react-native-webview": "^13.6.4",
     "react-transition-group": "^4.4.5",
     "react-use-websocket": "^4.13.0"
   },
@@ -45,6 +53,7 @@
     "@starknet-react/core": "^3.7.2",
     "react": "^18.0.0 || ^19.0.0",
     "react-dom": "^18.0.0 || ^19.0.0",
+    "react-native": ">=0.71.0",
     "react-router": "^7.1.5",
     "starknet": "6.11.0",
     "starknetkit": "^2.6.1",
@@ -58,6 +67,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-transition-group": "^4.4.12",
+    "autoprefixer": "^10.4.14",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
     "postcss": "^8.4.24",
@@ -69,7 +79,6 @@
     "starknetkit": "^2.6.1",
     "tailwindcss": "^3.3.2",
     "tsup": "^8.0.2",
-    "typescript": "^5",
-    "autoprefixer": "^10.4.14"
+    "typescript": "^5"
   }
 }
