--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -110,7 +110,7 @@
     "memoize-one": "^6.0.0",
     "metro-react-native-babel-preset": "^0.77.0",
     "mobile": "link:",
-    "nativewind": "^4.0.1",
+    "nativewind": "^4.1.23",
     "npx": "^10.2.2",
     "path": "^0.12.7",
     "pbkdf2": "^3.1.2",
@@ -161,7 +161,9 @@
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^3.3.3",
-    "typescript": "~5.3.3"
+    "typescript": "~5.3.3",
+    "nativewind": "^4.1.23",
+    "postcss": "^8.4.23"
   },
   "private": true
 }
