--- a/packages/pixel_component/package.json
+++ b/packages/pixel_component/package.json
@@ -49,14 +49,15 @@
   "peerDependencies": {
     "@starknet-react/chains": "^3.1.2",
     "@starknet-react/core": "^3.7.2",
+    "nativewind": "^4.1.23",
+    "postcss": "^8.4.24",
     "react": "^18.0.0 || ^19.0.0",
     "react-dom": "^18.0.0 || ^19.0.0",
     "react-native": ">=0.71.0",
     "react-router": "^7.1.5",
     "starknet": "6.11.0",
     "starknetkit": "^2.6.1",
-    "nativewind": "^4.0.1",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -71,6 +72,8 @@
     "eslint-config-next": "15.1.7",
     "postcss": "^8.4.24",
     "postcss-cli": "^10.1.0",
+    "postcss-import": "^16.1.0",
+    "postcss-nesting": "^13.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.1.5",
