--- a/pixel-backend/indexer/Dockerfile.worlds.prod
+++ b/pixel-backend/indexer/Dockerfile.worlds.prod
@@ -20,5 +20,4 @@ ARG NFT_CONTRACT_ADDRESS
 ENV NFT_CONTRACT_ADDRESS=${NFT_CONTRACT_ADDRESS}
 
 
-
-CMD ["run", "script.js", "--allow-env-from-env", "CONSUMER_TARGET_URL,APIBARA_STREAM_URL,PERSIST_TO_REDIS,INDEXER_ID,CANVAS_FACTORY_CONTRACT_ADDRESS", "--allow-net", "--sink-id", "canvas-factory-sink-id"]
+CMD ["run", "prod-worlds-script.js",  "--allow-env", "--allow-env-from-env", "CONSUMER_TARGET_URL,APIBARA_STREAM_URL,PERSIST_TO_REDIS,INDEXER_ID,CANVAS_FACTORY_CONTRACT_ADDRESS", "--allow-net", "--sink-id", "canvas-factory-sink-id"]
