--- a/packages/pixel_component/tsconfig.json
+++ b/packages/pixel_component/tsconfig.json
@@ -25,7 +25,8 @@
     "baseUrl": ".",
     "module": "ESNext",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "common/*": ["../common/src/*"]
     }
   },
   "include": [
