--- a/pixel-backend/Dockerfile.websocket.railway.prod
+++ b/pixel-backend/Dockerfile.websocket.railway.prod
@@ -10,14 +10,14 @@ COPY ./configs/prod-backend.config.json ./backend.config.json
 
 # Copy over the app
 WORKDIR /app
-COPY ./backend/go.mod ./backend/go.sum ./
+COPY ./pixel-backend/go.mod ./pixel-backend/go.sum ./
 RUN go mod download
-COPY ./backend .
+COPY ./pixel-backend .
 
 # Argument for Redis host and port
 ARG REDIS_HOST
 ARG REDIS_PORT
-
+ARG REDIS_PASSWORD
 # Argument for Postgres host, port, user, and database
 # ARG POSTGRES_HOST
 # ARG POSTGRES_PORT
@@ -41,6 +41,7 @@ ARG PRODUCTION
 # Create .env file with environment variables
 RUN echo "REDIS_HOST=${REDIS_HOST}" >> .env && \
     echo "REDIS_PORT=${REDIS_PORT}" >> .env && \
+    echo "REDIS_PASSWORD=${REDIS_PASSWORD}" >> .env && \
     echo "POSTGRES_HOST=${POSTGRES_HOST}" >> .env && \
     echo "POSTGRES_PORT=${POSTGRES_PORT}" >> .env && \
     echo "POSTGRES_USER=${POSTGRES_USER}" >> .env && \
