--- a/apps/art-game/tsconfig.json
+++ b/apps/art-game/tsconfig.json
@@ -22,6 +22,9 @@
       "@/*": ["./src/*"],
       "pixel_component": [
         "../../packages/pixel_component/src"
+      ],
+      "common": [
+        "../../packages/common/src"
       ]
     }
   },
