--- a/scripts/package.json
+++ b/scripts/package.json
@@ -23,6 +23,7 @@
     "deploy:quests_canva": "ts-node ./run/pixel/create_all_chain_faction.ts",
     "get_hash": "ts-node ./run/utils/get_hash.ts",
     "deploy:multi_canvas": "ts-node ./deploy/multi_canvas.ts",
+    "run:create_world": "ts-node ./deploy/multi_canvas/create_world.ts",
     "dev": "ts-node index.ts",
     "relay": "ts-node src/index.ts",
     "relay:dev": "nodemon --ext *"
