--- a/pixel-backend/indexer/Dockerfile.worlds.prod
+++ b/pixel-backend/indexer/Dockerfile.worlds.prod
@@ -1,7 +1,7 @@
 FROM quay.io/apibara/sink-webhook:0.6.0 as sink-webhook
 
 WORKDIR /indexer
-COPY ./indexer/prod-worlds-script.js .
+COPY ./indexer/worlds-script.js .
 
 ARG APIBARA_STREAM_URL
 
@@ -20,4 +20,4 @@ ARG NFT_CONTRACT_ADDRESS
 ENV NFT_CONTRACT_ADDRESS=${NFT_CONTRACT_ADDRESS}
 
 
-CMD ["run", "prod-worlds-script.js", "--allow-env", "--allow-env-from-env", "CONSUMER_TARGET_URL,APIBARA_STREAM_URL,PERSIST_TO_REDIS,INDEXER_ID,CANVAS_FACTORY_CONTRACT_ADDRESS,NFT_CONTRACT_ADDRESS", "--allow-net", "--sink-id", "canvas-factory-sink-id"]
+CMD ["run", "worlds-script.js", "--allow-env", "--allow-env-from-env", "CONSUMER_TARGET_URL,APIBARA_STREAM_URL,PERSIST_TO_REDIS,INDEXER_ID,CANVAS_FACTORY_CONTRACT_ADDRESS,NFT_CONTRACT_ADDRESS", "--allow-net", "--sink-id", "canvas-worlds-sink-id"]
