fix env minify issue env build css tailwind

--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -143,7 +143,9 @@
     "text-encoding": "^0.7.0",
     "viem": "2.21.60",
     "wagmi": "^2.12.8",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.2",
+    "postcss-import": "^16.1.0",
+    "postcss-nesting": "^13.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
