--- a/pixel-backend/Dockerfile.consumer.prod
+++ b/pixel-backend/Dockerfile.consumer.prod
@@ -51,6 +51,6 @@ RUN echo "REDIS_HOST=${REDIS_HOST}" >> .env && \
 # Build the app & run it
 RUN go build -o consumer ./cmd/consumer/consumer.go
 
-EXPOSE 8081
+EXPOSE CONSUMER_PORT
 
 CMD ["./consumer"]
