--- a/apps/art-game/package.json
+++ b/apps/art-game/package.json
@@ -25,8 +25,11 @@
     "react-use-websocket": "^4.13.0",
     "starknet": "^6.23.1",
     "starknetkit": "^2.6.1",
+    "axios": "^1.7.2",
     "pixel_component": "workspace:*",
-    "common": "workspace:*"
+    "common": "workspace:*",
+    "@tanstack/react-query": "^5.40.0",
+    "@tanstack/react-query-persist-client": "5.40.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
