--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -30,6 +30,8 @@
     "fix:all": "prettier --write \"src/**/*.{ts,tsx}\" && eslint --fix \"src/**/*.{ts,tsx}\""
   },
   "dependencies": {
+    "@atomiqlabs/chain-starknet": "^1.0.2",
+    "@atomiqlabs/sdk": "2.1.1",
     "@babel/runtime": "^7.24.8",
     "@cartridge/connector": "0.6.0",
     "@cartridge/controller": "0.6.0",
