--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -30,8 +30,8 @@
     "fix:all": "prettier --write \"src/**/*.{ts,tsx}\" && eslint --fix \"src/**/*.{ts,tsx}\""
   },
   "dependencies": {
-    "@atomiqlabs/chain-starknet": "^1.0.2",
-    "@atomiqlabs/sdk": "2.1.1",
+    "@atomiqlabs/chain-starknet": "latest",
+    "@atomiqlabs/sdk": "latest",
     "@babel/runtime": "^7.24.8",
     "@cartridge/connector": "0.6.0",
     "@cartridge/controller": "0.6.0",
@@ -112,6 +112,7 @@
     "jsqr": "^1.4.0",
     "memoize-one": "^6.0.0",
     "metro-react-native-babel-preset": "^0.77.0",
+    "mobile": "link:",
     "nativewind": "^4.1.23",
     "npx": "^10.2.2",
     "path": "^0.12.7",
