--- a/apps/mobile/tsconfig.json
+++ b/apps/mobile/tsconfig.json
@@ -13,7 +13,7 @@
     "esModuleInterop": true,
     "strict": true,
     "alwaysStrict": true,
-    "strictNullChecks": true,
+    "strictNullChecks": false,
     "noUnusedLocals": false,
     "noFallthroughCasesInSwitch": true,
     "noImplicitAny": true,
