--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -82,6 +82,8 @@
     "buffer": "^6.0.3",
     "common": "workspace:*",
     "crypto-es": "^2.1.0",
+    "dexie": "^4.0.11",
+    "dexie-react-hooks": "^1.1.7",
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.3",
     "events": "^3.3.0",
@@ -104,6 +106,7 @@
     "expo-sqlite": "^14.0.6",
     "expo-status-bar": "~1.12.1",
     "expo-web-browser": "^13.0.3",
+    "fake-indexeddb": "^6.0.0",
     "fast-text-encoding": "^1.0.6",
     "formik": "^2.4.6",
     "get-starknet-core": "^3.3.0",
