--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -115,6 +115,7 @@
     "jsqr": "^1.4.0",
     "memoize-one": "^6.0.0",
     "metro-react-native-babel-preset": "^0.77.0",
+    "mobile": "link:",
     "nativewind": "^4.1.23",
     "npx": "^10.2.2",
     "path": "^0.12.7",
@@ -131,6 +132,7 @@
     "react-native-keychain": "^8.2.0",
     "react-native-modal": "^13.0.1",
     "react-native-modalize": "^2.1.1",
+    "react-native-nfc-manager": "^3.14.11",
     "react-native-pager-view": "6.3.0",
     "react-native-passkey": "2.1.1",
     "react-native-portalize": "^1.0.7",
