Feat/do better (#567)
* try nfc example

* init ios and android

* fix useEffect Balanc ccashu

* fix chck fetch balance

* fix balance + zap

* try check proof state

* start fix db

* fix better working state update

* start check db

* lfg

* check and fix cashu

* fix fetch

* clean log

* fix balance init

* fix

--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -35,7 +35,7 @@
     "@babel/runtime": "^7.24.8",
     "@cartridge/connector": "0.6.0",
     "@cartridge/controller": "0.6.0",
-    "@cashu/cashu-ts": "^2.2.1",
+    "@cashu/cashu-ts": "2.4.1",
     "@docusaurus/core": "^3.5.2",
     "@docusaurus/preset-classic": "^3.5.2",
     "@dynamic-labs/client": "4.0.0-alpha.8",
@@ -115,6 +115,7 @@
     "jsqr": "^1.4.0",
     "memoize-one": "^6.0.0",
     "metro-react-native-babel-preset": "^0.77.0",
+    "mobile": "link:",
     "nativewind": "^4.1.23",
     "npx": "^10.2.2",
     "path": "^0.12.7",
@@ -131,6 +132,7 @@
     "react-native-keychain": "^8.2.0",
     "react-native-modal": "^13.0.1",
     "react-native-modalize": "^2.1.1",
+    "react-native-nfc-manager": "^3.14.11",
     "react-native-pager-view": "6.3.0",
     "react-native-passkey": "2.1.1",
     "react-native-portalize": "^1.0.7",
