--- a/onchain/cairo/launchpad/Scarb.toml
+++ b/onchain/cairo/launchpad/Scarb.toml
@@ -6,15 +6,16 @@ edition = "2023_11"
 # See more keys and their definitions at https://docs.swmansion.com/scarb/docs/reference/manifest.html
 
 [dependencies]
-starknet = ">=2.8.2"
-openzeppelin = { git = "https://github.com/openzeppelin/cairo-contracts", tag="v0.18.0" }
+starknet = "2.11.2"
+openzeppelin = "1.0.0"
 ekubo = { git = "https://github.com/EkuboProtocol/abis", rev = "edb6de8c9baf515f1053bbab3d86825d54a63bc3"}
 alexandria_storage = { git = "https://github.com/keep-starknet-strange/alexandria.git" }
 alexandria_math = { git = "https://github.com/keep-starknet-strange/alexandria.git" }
 cubit = { git = "https://github.com/MSGhais/cubit", rev = "f59f90ce519dcc56de8daa318b4edbaa6e2afc2a" }
 
 [dev-dependencies]
-snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry", tag = "v0.30.0" }
+snforge_std = "0.40.0"
+assert_macros = "2.11.2"
 
 #[lib]
 
@@ -33,6 +34,12 @@ allowed-libfuncs-list.name = "experimental"
 name = "Mainnet"
 url = "https://starknet-mainnet.public.blastapi.io/rpc/v0_7"
 block_id.number = "672259"
+
+# from copy
+# [[tool.snforge.fork]]
+# name = "Mainnet"
+# url = "https://starknet-mainnet.public.blastapi.io/rpc/v0_7"
+# block_id.number = "615925"
 
 [[tool.snforge.fork]]
 name = "Sepolia"
