--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -47,6 +47,7 @@
     "@getalby/bitcoin-connect-react": "^3.5.3",
     "@getalby/lightning-tools": "^5.0.3",
     "@getalby/sdk": "^3.6.1",
+    "@lexical/react": "^0.29.0",
     "@metamask/sdk": "~0.30.0",
     "@noble/curves": "^1.4.0",
     "@nostr-dev-kit/ndk": "2.10.1",
@@ -87,17 +88,17 @@
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.3",
     "events": "^3.3.0",
-    "expo": "~51.0.38",
-    "expo-application": "^5.9.1",
-    "expo-auth-session": "^5.5.2",
-    "expo-av": "~14.0.7",
-    "expo-camera": "^15.0.16",
-    "expo-checkbox": "^4.0.0",
-    "expo-clipboard": "~6.0.3",
-    "expo-constants": "^16.0.2",
-    "expo-crypto": "~13.0.2",
-    "expo-device": "^6.0.2",
-    "expo-font": "^12.0.9",
+    "expo": "latest",
+    "expo-application": "latest",
+    "expo-auth-session": "latest",
+    "expo-av": "latest",
+    "expo-camera": "latest",
+    "expo-checkbox": "latest",
+    "expo-clipboard": "latest",
+    "expo-constants": "latest",
+    "expo-crypto": "latest",
+    "expo-device": "latest",
+    "expo-font": "latest",
     "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
     "expo-notifications": "^0.28.18",
@@ -113,6 +114,7 @@
     "hls.js": "^1.5.17",
     "install": "^0.13.0",
     "jsqr": "^1.4.0",
+    "lexical": "^0.29.0",
     "memoize-one": "^6.0.0",
     "metro-react-native-babel-preset": "^0.77.0",
     "mobile": "link:",
@@ -124,17 +126,20 @@
     "postcss": "^8.4.23",
     "postcss-import": "^16.1.0",
     "postcss-nesting": "^13.0.1",
+    "quill": "2.0.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.74.3",
     "react-native-gesture-handler": "2.16.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-keychain": "^8.2.0",
+    "react-native-markdown-display": "^7.0.2",
     "react-native-modal": "^13.0.1",
     "react-native-modalize": "^2.1.1",
     "react-native-nfc-manager": "^3.14.11",
     "react-native-pager-view": "6.3.0",
     "react-native-passkey": "2.1.1",
+    "react-native-pell-rich-editor": "^1.9.0",
     "react-native-portalize": "^1.0.7",
     "react-native-qrcode-svg": "^6.3.12",
     "react-native-reanimated": "~3.10.1",
