--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -71,6 +71,7 @@
     "@stripe/stripe-react-native": "0.38.6",
     "@tanstack/react-query": "^5.40.0",
     "@tanstack/react-query-persist-client": "5.40.0",
+    "@uiw/react-md-editor": "^4.0.5",
     "@uniswap/sdk-core": "^5.3.1",
     "@walletconnect/react-native-compat": "2.16.1",
     "@webbtc/webln-types": "^2.1.0",
