--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -116,6 +116,7 @@
     "install": "^0.13.0",
     "jsqr": "^1.4.0",
     "lexical": "^0.29.0",
+    "markdown-it": "^14.1.0",
     "memoize-one": "^6.0.0",
     "metro-react-native-babel-preset": "^0.77.0",
     "mobile": "link:",
@@ -130,6 +131,7 @@
     "quill": "2.0.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-markdown-editor-lite": "^1.3.4",
     "react-native": "0.74.3",
     "react-native-gesture-handler": "2.16.2",
     "react-native-get-random-values": "^1.11.0",
