--- a/apps/algo-backend/package.json
+++ b/apps/algo-backend/package.json
@@ -31,10 +31,17 @@
     "@fastify/session": "^11.0.1",
     "@fastify/static": "7.0.4",
     "@funkit/api-base": "^1.3.2",
+    "@huggingface/transformers": "latest",
+    "@langchain/core": "^0.3.43",
+    "@langchain/openai": "^0.3.10",
+    "@langchain/pinecone": "^0.2.0",
+    "@nostr-dev-kit/ndk": "2.10.1",
+    "@pinecone-database/pinecone": "^5.1.1",
     "@prisma/client": "^5.22.0",
     "@telegraf/types": "^7.1.0",
     "apollo-server": "^3.13.0",
     "bcryptjs": "^2.4.3",
+    "common": "workspace:*",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.37.0",
@@ -47,22 +54,16 @@
     "indexer-prisma": "workspace:*",
     "indexer-v2-db": "workspace:*",
     "jsonwebtoken": "^9.0.2",
+    "langchain": "^0.3.10",
     "nodemailer": "^6.9.16",
+    "nostr-tools": "2.12.0",
     "pg": "^8.13.1",
     "pg-promise": "^11.10.1",
     "prisma-db": "workspace:*",
     "socket.io": "^4.8.1",
     "telegraf": "^4.16.3",
     "twitter-api-v2": "^1.18.1",
-    "typescript": "^5.6.3",
-    "langchain": "^0.3.10",
-    "@langchain/core": "^0.3.43",
-    "@langchain/openai": "^0.3.10",
-    "@pinecone-database/pinecone": "^5.1.1",
-    "@nostr-dev-kit/ndk": "2.10.1",
-    "nostr-tools": "2.12.0",
-    "@huggingface/transformers":"latest",
-    "common": "workspace:*"
+    "typescript": "^5.6.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
