--- a/apps/algo-backend/.env.example
+++ b/apps/algo-backend/.env.example
@@ -52,3 +52,7 @@ TWITTER_CALLBACK_URL="http://localhost:8081/app/SocialPayment"
 
 TWITTER_CLIENT_ID=""
 TWITTER_CLIENT_SECRET=""
+
+
+
+EXTERNAL_NOSTR_API="https://api.nostr.wine/"
