--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -15,6 +15,7 @@
     "ts:check": "tsc --noEmit"
   },
   "dependencies": {
+    "@argent/x-sessions": "^6.7.4",
     "@avnu/avnu-sdk": "^2.0.0",
     "@chakra-ui/next-js": "^2.2.0",
     "@chakra-ui/react": "^2.8.2",
@@ -38,17 +39,15 @@
     "qs": "^6.12.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-transition-group": "^4.4.5",
     "react-use-websocket": "^4.8.1",
     "starknet": "6.9.0",
+    "starknetkit-next": "npm:starknetkit@2.3.0",
     "viem": "~2.21.2",
     "wagmi": "^2.12.8",
     "zod": "^3.23.8",
-    "zustand": "^4.5.2",
-    "starknetkit-next": "npm:starknetkit@2.3.0",
-    "@argent/x-sessions": "^6.7.4"
-
-
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
