upgrade chakra and nexjts version => bug css crazy wtf

--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -17,9 +17,9 @@
   "dependencies": {
     "@argent/x-sessions": "^6.7.4",
     "@avnu/avnu-sdk": "^2.0.0",
-    "@chakra-ui/next-js": "^2.2.0",
-    "@chakra-ui/react": "^2.8.2",
-    "@chakra-ui/theme-tools": "^2.1.2",
+    "@chakra-ui/next-js": "latest",
+    "@chakra-ui/react": "latest",
+    "@chakra-ui/theme-tools": "latest",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@nostr-dev-kit/ndk": "2.10.1",
@@ -34,7 +34,7 @@
     "framer-motion": "^11.3.28",
     "get-starknet-core": "^3.3.0",
     "js-sha256": "^0.11.0",
-    "next": "^14.2.3",
+    "next": "latest",
     "nostr-tools": "^2.7.0",
     "qs": "^6.12.3",
     "react": "^18.3.1",
@@ -46,6 +46,7 @@
     "starknetkit-next": "npm:starknetkit@2.3.0",
     "viem": "~2.21.2",
     "wagmi": "^2.12.8",
+    "website": "link:",
     "zod": "^3.23.8",
     "zustand": "^4.5.2"
   },
