fix chakra and tailwind issue

--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -17,9 +17,9 @@
   "dependencies": {
     "@argent/x-sessions": "^6.7.4",
     "@avnu/avnu-sdk": "^2.0.0",
-    "@chakra-ui/next-js": "latest",
-    "@chakra-ui/react": "latest",
-    "@chakra-ui/theme-tools": "latest",
+    "@chakra-ui/next-js": "^2.2.0",
+    "@chakra-ui/react": "^2.8.2",
+    "@chakra-ui/theme-tools": "^2.1.2",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@nostr-dev-kit/ndk": "2.10.1",
@@ -37,8 +37,8 @@
     "next": "latest",
     "nostr-tools": "^2.7.0",
     "qs": "^6.12.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "latest",
+    "react-dom": "latest",
     "react-icons": "^5.5.0",
     "react-transition-group": "^4.4.5",
     "react-use-websocket": "^4.8.1",
