--- a/apps/algo-backend/package.json
+++ b/apps/algo-backend/package.json
@@ -32,7 +32,9 @@
     "@fastify/static": "7.0.4",
     "@funkit/api-base": "^1.3.2",
     "@huggingface/transformers": "latest",
+    "@langchain/community": "^0.3.40",
     "@langchain/core": "^0.3.43",
+    "@langchain/ollama": "^0.2.0",
     "@langchain/openai": "^0.3.10",
     "@langchain/pinecone": "^0.2.0",
     "@nostr-dev-kit/ndk": "2.10.1",
@@ -55,6 +57,7 @@
     "indexer-v2-db": "workspace:*",
     "jsonwebtoken": "^9.0.2",
     "langchain": "^0.3.10",
+    "llama-node": "^0.1.6",
     "nodemailer": "^6.9.16",
     "nostr-tools": "2.12.0",
     "pg": "^8.13.1",
