--- a/scripts/package.json
+++ b/scripts/package.json
@@ -24,6 +24,7 @@
     "get_hash": "ts-node ./run/utils/get_hash.ts",
     "deploy:multi_canvas": "ts-node ./deploy/multi_canvas.ts",
     "run:create_world": "ts-node ./deploy/multi_canvas/create_world.ts",
+    "deploy:nostrfi_scoring": "ts-node ./deploy/nostr/nostrfi_scoring.ts",
     "dev": "ts-node index.ts",
     "relay": "ts-node src/index.ts",
     "relay:dev": "nodemon --ext *"
