wip fix indexer factory + scritps

--- a/scripts/package.json
+++ b/scripts/package.json
@@ -26,6 +26,7 @@
     "run:create_world": "ts-node ./deploy/multi_canvas/create_world.ts",
     "deploy:nostrfi_scoring": "ts-node ./deploy/nostr/nostrfi_scoring.ts",
     "deploy:factory_score": "ts-node ./deploy/nostr/factory_score.ts",
+    "run:create_topic": "ts-node ./run/nostr/create_nostr_topic.ts",
     "dev": "ts-node index.ts",
     "relay": "ts-node src/index.ts",
     "relay:dev": "nodemon --ext *"
