--- a/apps/indexer-v2/package.json
+++ b/apps/indexer-v2/package.json
@@ -13,17 +13,19 @@
     "test": "vitest"
   },
   "dependencies": {
-    "@apibara/evm": "2.1.0-beta.6",
-    "@apibara/indexer": "2.1.0-beta.6",
-    "@apibara/plugin-drizzle": "2.1.0-beta.6",
-    "@apibara/protocol": "2.1.0-beta.6",
-    "@apibara/starknet": "2.1.0-beta.6",
-    "apibara": "2.1.0-beta.6",
-    "drizzle-orm": "^0.37.0",
+    "@apibara/evm": "2.1.0-beta.32",
+    "@apibara/indexer": "2.1.0-beta.32",
+    "@apibara/plugin-drizzle": "2.1.0-beta.32",
+    "@apibara/protocol": "2.1.0-beta.32",
+    "@apibara/starknet": "2.1.0-beta.32",
+    "@electric-sql/pglite": "^0.2.14",
+    "apibara": "2.1.0-beta.32",
+    "drizzle-orm": "^0.40.1",
+    "drizzle-kit": "^0.31.0",
+    "indexer-v2": "link:",
     "indexer-v2-db": "workspace:*",
     "starknet": "^6.11.0",
-    "viem": "^2.22.9",
-    "@electric-sql/pglite": "^0.2.14"
+    "viem": "^2.22.9"
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^11.1.6",
