--- a/apps/data-backend/package.json
+++ b/apps/data-backend/package.json
@@ -39,8 +39,9 @@
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
+    "data-backend": "link:",
     "dotenv": "^16.4.5",
-    "drizzle-orm": "^0.37.0",
+    "drizzle-orm": "^0.40.1",
     "fastify": "^5.1.0",
     "fastify-plugin": "^5.0.1",
     "fastify-socket.io": "^5.1.0",
