--- a/scripts/package.json
+++ b/scripts/package.json
@@ -27,6 +27,7 @@
     "deploy:nostrfi_scoring": "ts-node ./deploy/nostr/nostrfi_scoring.ts",
     "deploy:factory_score": "ts-node ./deploy/nostr/factory_score.ts",
     "run:create_topic": "ts-node ./run/nostr/create_nostr_topic.ts",
+    "run:link_namespace": "ts-node ./run/nostr/link_namespace.ts",
     "dev": "ts-node index.ts",
     "relay": "ts-node src/index.ts",
     "relay:dev": "nodemon --ext *"
