--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -50,6 +50,7 @@
     "@lexical/react": "^0.29.0",
     "@metamask/sdk": "~0.30.0",
     "@noble/curves": "^1.4.0",
+    "@noble/secp256k1": "latest",
     "@nostr-dev-kit/ndk": "2.10.1",
     "@nostr-dev-kit/ndk-wallet": "^0.2.0",
     "@rainbow-me/rainbowkit": "^2.1.5",
@@ -119,6 +120,7 @@
     "markdown-it": "^14.1.0",
     "memoize-one": "^6.0.0",
     "metro-react-native-babel-preset": "^0.77.0",
+    "mobile": "link:",
     "nativewind": "^4.1.23",
     "npx": "^10.2.2",
     "path": "^0.12.7",
