ICO Tests and Fixes (#580)
* ico start

* launch_presale

* fmt

* feat: buy_token and other enhancements

* feat: buy_token

* feat: cancel_buy

* minor fix

* feat: claim

* feat: claim_all

* fix: added update in claims

* ico_tests init

* feat: more ico_tests util functions and tests

* feat: launch_presale tests

* feat: launch_liquidity, part 1

* feat: implemented launch_liquidity

* feat: _add_liquidity_ekubo start

* feat: _add_liquidity_ekubo, part 2

* feat: _add_liquidity_ekubo finalized

* feat: buy_token tests

* feat: more tests

* feat: tests on claim

* feat: mores tests and fixes in ico

* feat: more ico tests

* feat

* feat: finalized tests, part 1

* fmt

--- a/onchain/cairo/launchpad/Scarb.toml
+++ b/onchain/cairo/launchpad/Scarb.toml
@@ -48,3 +48,7 @@ block_id.number = "672259"
 name = "Sepolia"
 url = "https://starknet-sepolia.public.blastapi.io/rpc/v0_8"
 block_id.number = "615925"
+
+# [profile.dev.cairo]
+# unstable-add-statements-code-locations-debug-info = true
+# unstable-add-statements-functions-debug-info = true
