--- a/packages/afk_nostr_sdk/package.json
+++ b/packages/afk_nostr_sdk/package.json
@@ -30,7 +30,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "zustand": "^4.5.2",
-    "@noble/secp256k1":"latest"
+    "@noble/secp256k1": "^1.7.1"
   },
   "peerDependencies": {
     "@nostr-dev-kit/ndk": "^2.10.1",
