--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -2,7 +2,6 @@
   "name": "mobile",
   "version": "1.0.0",
   "main": "index.js",
-  "packageManager": "pnpm@8.15.9",
   "scripts": {
     "dev": "expo start",
     "build:web": "npx expo export --platform web",
@@ -50,7 +49,6 @@
     "@lexical/react": "^0.29.0",
     "@metamask/sdk": "~0.30.0",
     "@noble/curves": "^1.4.0",
-    "@noble/secp256k1": "^1.7.1",
     "@nostr-dev-kit/ndk": "2.10.1",
     "@nostr-dev-kit/ndk-wallet": "^0.2.0",
     "@rainbow-me/rainbowkit": "^2.1.5",
@@ -182,5 +180,7 @@
     "prettier": "^3.3.3",
     "typescript": "~5.3.3"
   },
-  "private": true
+  "private": true,
+  "packageManager": "pnpm@8.15.9",
+  "pnpm": {}
 }
