--- a/apps/mobile/vercel.json
+++ b/apps/mobile/vercel.json
@@ -2,7 +2,6 @@
     "buildCommand": "pnpm install && pnpm build:web",
     "outputDirectory": "dist",
     "devCommand": "pnpm start:web",
-    "packageManager": "pnpm@8.15.9",
     "cleanUrls": true,
     "framework": null,
     "rewrites": [
@@ -11,15 +10,7 @@
         "destination": "/"
       }
     ],
-    "installCommand": "pnpm install --frozen-lockfile",
-    "builds": [
-      {
-        "src": "package.json",
-        "use": "@vercel/static-build",
-        "config": {
-          "distDir": "dist"
-        }
-      }
-    ]
+    "installCommand": "pnpm install --frozen-lockfile"
+ 
   }
   
