--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -56,6 +56,7 @@
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/netinfo": "11.3.1",
     "@react-native-picker/picker": "2.7.5",
+    "@react-native/metro-config": "^0.79.2",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.17",
@@ -119,6 +120,7 @@
     "markdown-it": "^14.1.0",
     "memoize-one": "^6.0.0",
     "metro-react-native-babel-preset": "^0.77.0",
+    "mobile": "link:",
     "nativewind": "^4.1.23",
     "npx": "^10.2.2",
     "path": "^0.12.7",
@@ -131,7 +133,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-markdown-editor-lite": "^1.3.4",
-    "react-native": "0.74.3",
+    "react-native": "0.79.2",
     "react-native-gesture-handler": "2.16.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-keychain": "^8.2.0",
