--- a/onchain/cairo/launchpad/Scarb.toml
+++ b/onchain/cairo/launchpad/Scarb.toml
@@ -21,7 +21,6 @@ assert_macros = "2.11.2"
 [workspace.package]
 version = "0.1.0"
 
-
 [scripts]
 test = "snforge test"
 
@@ -48,6 +47,9 @@ block_id.number = "672259"
 name = "Sepolia"
 url = "https://starknet-sepolia.public.blastapi.io/rpc/v0_8"
 block_id.number = "615925"
+
+[tool.scarb]
+allow-prebuilt-plugins = ["snforge_std"]
 
 # [profile.dev.cairo]
 # unstable-add-statements-code-locations-debug-info = true
