--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -41,7 +41,8 @@
     "web": {
       "favicon": "./assets/favicon.png",
       "deepLinking": true,
-      "bundler": "metro"
+      "bundler": "metro",
+      "output": "static"
     },
     "plugins": [
       [
@@ -101,6 +102,7 @@
       "eas": {
         "projectId": "f68a6dce-559a-48e0-9376-e5c870bdfc22"
       }
-    }
+    },
+    "entryPoint": "./index.js"
   }
 }
