Feat/nostr contract (#583)
* sig verif script issue

* try fix

* used address

* fix

* fix package preset

* fix

* fix vercel.json

* wip

* wip

* issue config new expo version

* try fix

* big issue

* expo issue

--- a/apps/mobile/vercel.json
+++ b/apps/mobile/vercel.json
@@ -1,14 +1,14 @@
 {
-    "buildCommand": "expo export -p web",
-    "outputDirectory": "dist",
-    "devCommand": "expo",
-    "cleanUrls": true,
-    "framework": null,
-    "rewrites": [
-      {
-        "source": "/:path*",
-        "destination": "/"
-      }
-    ]
-  }
-  
+  "buildCommand": "npx expo export:web",
+  "outputDirectory": "dist",
+  "devCommand": "pnpm start:web",
+  "cleanUrls": true,
+  "framework": "nextjs",
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/"
+    }
+  ],
+  "installCommand": "pnpm install --no-frozen-lockfile"
+}
