--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -43,7 +43,7 @@
     "@dynamic-labs/react-native-extension": "4.0.0-alpha.8",
     "@dynamic-labs/utils": "^3.3.0",
     "@dynamic-labs/viem-extension": "4.0.0-alpha.8",
-    "@expo/metro-runtime": "~3.2.1",
+    "@expo/metro-runtime": "~3.2.3",
     "@getalby/bitcoin-connect-react": "^3.5.3",
     "@getalby/lightning-tools": "^5.0.3",
     "@getalby/sdk": "^3.6.1",
@@ -53,9 +53,10 @@
     "@nostr-dev-kit/ndk": "2.10.1",
     "@nostr-dev-kit/ndk-wallet": "^0.2.0",
     "@rainbow-me/rainbowkit": "^2.1.5",
-    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/netinfo": "11.3.1",
     "@react-native-picker/picker": "2.7.5",
+    "@react-native/metro-config": "^0.79.2",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.17",
@@ -68,7 +69,7 @@
     "@starknet-react/chains": "^3.1.0",
     "@starknet-react/core": "^3.7.2",
     "@starknet-react/kakarot": "^3.0.9",
-    "@stripe/stripe-react-native": "0.38.6",
+    "@stripe/stripe-react-native": "0.37.2",
     "@tanstack/react-query": "^5.40.0",
     "@tanstack/react-query-persist-client": "5.40.0",
     "@uiw/react-md-editor": "^4.0.5",
@@ -89,22 +90,22 @@
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.3",
     "events": "^3.3.0",
-    "expo": "latest",
-    "expo-application": "latest",
-    "expo-auth-session": "latest",
-    "expo-av": "latest",
-    "expo-camera": "latest",
-    "expo-checkbox": "latest",
-    "expo-clipboard": "latest",
-    "expo-constants": "latest",
-    "expo-crypto": "latest",
-    "expo-device": "latest",
-    "expo-font": "latest",
-    "expo-image-picker": "~15.0.7",
+    "expo": "53.0.7",
+    "expo-application": "^5.9.1",
+    "expo-auth-session": "^5.5.2",
+    "expo-av": "^14.0.7",
+    "expo-camera": "^15.0.16",
+    "expo-checkbox": "^3.0.0",
+    "expo-clipboard": "^6.0.3",
+    "expo-constants": "^16.0.2",
+    "expo-crypto": "^13.0.2",
+    "expo-device": "^6.0.2",
+    "expo-font": "^12.0.10",
+    "expo-image-picker": "~15.1.0",
     "expo-linking": "~6.3.1",
-    "expo-notifications": "^0.28.18",
+    "expo-notifications": "^0.28.19",
     "expo-secure-store": "~13.0.2",
-    "expo-splash-screen": "~0.27.4",
+    "expo-splash-screen": "~0.27.7",
     "expo-sqlite": "^14.0.6",
     "expo-status-bar": "~1.12.1",
     "expo-web-browser": "^13.0.3",
@@ -119,6 +120,7 @@
     "markdown-it": "^14.1.0",
     "memoize-one": "^6.0.0",
     "metro-react-native-babel-preset": "^0.77.0",
+    "mobile": "link:",
     "nativewind": "^4.1.23",
     "npx": "^10.2.2",
     "path": "^0.12.7",
@@ -128,10 +130,10 @@
     "postcss-import": "^16.1.0",
     "postcss-nesting": "^13.0.1",
     "quill": "2.0.3",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-markdown-editor-lite": "^1.3.4",
-    "react-native": "0.74.3",
+    "react-native": "0.74.5",
     "react-native-gesture-handler": "2.16.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-keychain": "^8.2.0",
@@ -146,13 +148,13 @@
     "react-native-qrcode-svg": "^6.3.12",
     "react-native-reanimated": "~3.10.1",
     "react-native-redash": "^18.1.3",
-    "react-native-safe-area-context": "4.10.1",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-vision-camera": "^4.5.3",
     "react-native-web": "~0.19.6",
-    "react-native-webview": "~13.6.4",
+    "react-native-webview": "~13.8.6",
     "react-native-webview-crypto": "^0.0.25",
     "starknet": "6.11.0",
     "starknetkit": "^2.6.1",
@@ -166,7 +168,7 @@
     "@babel/core": "^7.20.0",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@types/pbkdf2": "^3.1.2",
-    "@types/react": "~18.3.1",
+    "@types/react": "~18.2.79",
     "@uniswap/eslint-config": "^1.2.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
@@ -181,5 +183,8 @@
     "prettier": "^3.3.3",
     "typescript": "~5.3.3"
   },
-  "private": true
+  "private": true,
+  "expo": {
+    "entryPoint": "./index.js"
+  }
 }
