--- a/apps/pwa/package.json
+++ b/apps/pwa/package.json
@@ -20,6 +20,8 @@
     "@argent/tma-wallet": "1.19.3",
     "@argent/x-sessions": "^6.7.4",
     "@avnu/avnu-sdk": "^2.0.0",
+    "@cartridge/connector": "^0.7.13",
+    "@cartridge/controller": "^0.7.13",
     "@chakra-ui/icons": "^2.2.4",
     "@chakra-ui/next-js": "^2.2.0",
     "@chakra-ui/react": "^2.8.2",
@@ -33,29 +35,31 @@
     "@starknet-react/chains": "^0.1.7",
     "@starknet-react/core": "^2.8.2",
     "@tanstack/react-query": "^5.40.0",
+    "afk_react_sdk": "workspace:*",
     "axios": "^1.7.2",
     "common": "workspace:*",
     "d3": "^7.9.0",
     "ethers": "^6.13.1",
+    "formik": "^2.4.6",
     "framer-motion": "^11.3.28",
     "get-starknet-core": "^3.3.0",
     "js-sha256": "^0.11.0",
     "next": "^14.2.3",
     "nostr-tools": "^2.7.0",
-    "pixel_ui": "workspace:*",
+    "pwa": "link:",
     "qs": "^6.12.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-transition-group": "^4.4.5",
     "react-use-websocket": "^4.8.1",
+    "sass": "^1.87.0",
     "starknet": "6.9.0",
-    "starknetkit-next": "npm:starknetkit@^2.6.1",
+    "starknetkit": "2.10.4",
     "viem": "~2.21.2",
     "wagmi": "^2.13.4",
+    "yup": "^1.6.1",
     "zod": "^3.23.8",
-    "zustand": "^4.5.2",
-    "afk_react_sdk": "workspace:*",
-    "afk_sdk": "workspace:*"
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
