--- a/apps/pwa/package.json
+++ b/apps/pwa/package.json
@@ -45,6 +45,7 @@
     "get-starknet-core": "^3.3.0",
     "js-sha256": "^0.11.0",
     "next": "^14.2.3",
+    "next-auth": "^4.24.11",
     "nostr-tools": "^2.7.0",
     "pwa": "link:",
     "qs": "^6.12.3",
