start launch address

--- a/apps/pwa/.env.example
+++ b/apps/pwa/.env.example
@@ -31,3 +31,5 @@ NEXT_PUBLIC_BACKEND_URL=
 
 NEXT_PUBLIC_DYNAMIC_API_KEY="dynamic env id"
 NEXT_PUBLIC_DYNAMIC_ENV_ID="dynamic env id"
+
+NEXT_PUBLIC_INDEXER_BACKEND_URL="http://localhost:5050"
