--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -104,6 +104,7 @@
     "expo-image-picker": "~15.1.0",
     "expo-linking": "~6.3.1",
     "expo-notifications": "^0.28.19",
+    "expo-router": "^5.0.6",
     "expo-secure-store": "~13.0.2",
     "expo-splash-screen": "~0.27.7",
     "expo-sqlite": "^14.0.6",
