--- a/apps/pwa/tsconfig.json
+++ b/apps/pwa/tsconfig.json
@@ -32,7 +32,8 @@
       "pixel_ui": ["../../packages/pixel_ui/src"],
       "common": ["../../packages/common/src"],
       "afk_sdk": ["../../packages/afk_sdk/src"],
-      "afk_react_sdk": ["../../packages/afk_react_sdk/src"]
+      "afk_react_sdk": ["../../packages/afk_react_sdk/src"],
+      "afk_nostr_sdk": ["../../packages/afk_nostr_sdk/src"]
     },
     "noEmit": true
   },
