--- a/apps/pwa/package.json
+++ b/apps/pwa/package.json
@@ -60,7 +60,8 @@
     "wagmi": "^2.13.4",
     "yup": "^1.6.1",
     "zod": "^3.23.8",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.2",
+    "afk_nostr_sdk": "workspace:*"
   },
   "devDependencies": {
     "@types/node": "^20",
