--- a/packages/afk_nostr_sdk/package.json
+++ b/packages/afk_nostr_sdk/package.json
@@ -21,16 +21,15 @@
     "@noble/ciphers": "0.4.1",
     "@noble/curves": "1.3.0",
     "@noble/hashes": "1.3.3",
+    "@noble/secp256k1": "^1.7.1",
     "@nostr-dev-kit/ndk": "^2.10.1",
     "@nostr-dev-kit/ndk-wallet": "^0.2.0",
     "@scure/base": "1.1.5",
     "@tanstack/react-query": "^5.40.0",
-    "@webbtc/webln-types": "^2.1.0",
     "bip39": "^3.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "zustand": "^4.5.2",
-    "@noble/secp256k1": "^1.7.1"
+    "zustand": "^4.5.2"
   },
   "peerDependencies": {
     "@nostr-dev-kit/ndk": "^2.10.1",
