--- a/packages/afk_nostr_sdk/tsconfig.json
+++ b/packages/afk_nostr_sdk/tsconfig.json
@@ -17,6 +17,7 @@
     "skipLibCheck": true,
     "declaration": true,
     "sourceMap": true,
+    "typeRoots": ["./node_modules/@types", "./src/types"]
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"],
