--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -90,7 +90,7 @@
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.3",
     "events": "^3.3.0",
-    "expo": "53.0.7",
+    "expo": "52.0.37",
     "expo-application": "^5.9.1",
     "expo-auth-session": "^5.5.2",
     "expo-av": "^14.0.7",
@@ -162,7 +162,9 @@
     "text-encoding": "^0.7.0",
     "viem": "2.21.60",
     "wagmi": "^2.12.8",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.2",
+    "@noble/hashes": "1.3.3",
+    "multiformats": "9.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -184,7 +186,12 @@
     "typescript": "~5.3.3"
   },
   "private": true,
-  "expo": {
-    "entryPoint": "./index.js"
+  "resolutions": {
+    "@noble/hashes": "1.3.3",
+    "multiformats": "9.9.0"
+  },
+  "overrides": {
+    "@noble/hashes": "1.3.3",
+    "multiformats": "9.9.0"
   }
 }
