--- a/package.json
+++ b/package.json
@@ -62,6 +62,14 @@
   "engines": {
     "node": ">=14.0.0"
   },
+  "resolutions": {
+    "@noble/hashes": "1.3.3",
+    "multiformats": "9.9.0"
+  },
+  "overrides": {
+    "@noble/hashes": "1.3.3",
+    "multiformats": "9.9.0"
+  },
   "packageManager": "pnpm@8.15.9",
   "pnpm": {}
 }
