--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -162,9 +162,7 @@
     "text-encoding": "^0.7.0",
     "viem": "2.21.60",
     "wagmi": "^2.12.8",
-    "zustand": "^4.5.2",
-    "@noble/hashes": "1.3.3",
-    "multiformats": "9.9.0"
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
