--- a/mobile-template/package.json
+++ b/mobile-template/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
+    "dev": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -15,6 +16,7 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "@tanstack/react-query": "^5.40.0",
     "expo": "~53.0.8",
     "expo-application": "^5.9.1",
     "expo-auth-session": "^5.5.2",
@@ -69,6 +71,8 @@
     "starknet": "6.11.0",
     "starknetkit": "^2.6.1",
     "zustand": "^4.5.2",
+       "@nostr-dev-kit/ndk": "^2.10.0",
+    "@nostr-dev-kit/ndk-wallet": "^0.2.0",
     "afk_nostr_sdk": "workspace:*"
   },
   "devDependencies": {
