--- a/packages/afk_nostr_sdk/package.json
+++ b/packages/afk_nostr_sdk/package.json
@@ -4,7 +4,7 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "tsup src/index.ts --format esm,cjs --dts",
+    "build": "mkdir -p dist",
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
     "format:check": "prettier --check \"src/**/*.{ts,tsx}\"",
     "lint": "eslint \"src/**/*.{ts,tsx}\"",
@@ -21,23 +21,23 @@
     "@noble/ciphers": "0.4.1",
     "@noble/curves": "1.3.0",
     "@noble/hashes": "1.3.3",
-    "@nostr-dev-kit/ndk": "^2.10.1",
+    "@noble/secp256k1": "^1.7.1",
+    "@nostr-dev-kit/ndk": "^2.10.0",
     "@nostr-dev-kit/ndk-wallet": "^0.2.0",
     "@scure/base": "1.1.5",
     "@tanstack/react-query": "^5.40.0",
     "@webbtc/webln-types": "^2.1.0",
     "bip39": "^3.1.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "zustand": "^4.5.2",
-    "@noble/secp256k1": "^1.7.1"
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "zustand": "^4.5.2"
   },
   "peerDependencies": {
-    "@nostr-dev-kit/ndk": "^2.10.1",
+    "@nostr-dev-kit/ndk": "^2.10.0",
     "@nostr-dev-kit/ndk-wallet": "^0.2.0",
     "@tanstack/react-query": "^5.40.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "zustand": "^4.5.2"
   },
   "module": "dist/index.js",
@@ -46,12 +46,12 @@
       "import": "./dist/index.js",
       "require": "./dist/index.js",
       "types": "./dist/index.d.ts"
-    } 
+    }
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
-    "@nostr-dev-kit/ndk": "^2.10.1",
+    "@nostr-dev-kit/ndk": "^2.10.0",
     "@nostr-dev-kit/ndk-wallet": "^0.2.0",
     "@tanstack/react-query": "^5.40.0",
     "@types/react": "^18.3.1",
@@ -67,11 +67,21 @@
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^3.2.5",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "tsup": "^8.0.2",
     "typescript": "~5.3.3",
     "zustand": "^4.5.2"
   },
-  "private": true
+  "private": true,
+  "files": [
+    "dist"
+  ],
+  "typesVersions": {
+    "*": {
+      "*": [
+        "./dist/index.d.ts"
+      ]
+    }
+  }
 }
