--- a/mobile-template/package.json
+++ b/mobile-template/package.json
@@ -113,6 +113,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@babel/plugin-syntax-import-meta": "^7.10.4",
     "@types/react": "~19.0.10",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
