--- a/packages/afk_nostr_sdk/package.json
+++ b/packages/afk_nostr_sdk/package.json
@@ -24,12 +24,14 @@
     "@noble/curves": "1.9.0",
     "@noble/hashes": "1.8.0",
     "@noble/secp256k1": "^2.2.3",
-    "@scure/bip39": "^1.6.0",
     "@nostr-dev-kit/ndk": "^2.14.9",
     "@nostr-dev-kit/ndk-wallet": "^0.5.13",
-    "@tanstack/react-query": "^5.40.0",
-    "bip39": "^3.1.0",
+    "@scure/base": "^1.2.5",
     "@scure/bip32": "^1.7.0",
+    "@scure/bip39": "^1.6.0",
+    "@tanstack/react-query": "^5.40.0",
+    "@webbtc/webln-types": "^2.1.0",
+    "bip39": "^3.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "zustand": "^4.5.2"
@@ -37,8 +39,8 @@
   "peerDependencies": {
     "@nostr-dev-kit/ndk": "^2.14.9",
     "@nostr-dev-kit/ndk-wallet": "^0.5.13",
-    "@scure/bip39": "^1.6.0",
     "@scure/bip32": "^1.7.0",
+    "@scure/bip39": "^1.6.0",
     "@tanstack/react-query": "^5.40.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
